tests/fixtures/invalid/aggregate_compound_literal_const_pointer_field_assignment.c
struct Cursor {
    int * const p;
};

int main(void) {
    int values[2] = {1, 2};
    return *(((struct Cursor){values}).p = values + 1);
}
